# Handwritten-Math-Grader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
app/: __init__.py
app/services/: __init__.py  exporter.py  gemini_client.py  geometry_parser.py  grader.py  layout_segmentation.py  math_parser.py  ocr_service.py  preprocess.py
frontend/: streamlit_app.py
frontend/components/: grader_ui.py  image_viewer.py  ocr_editor.py  uploader.py
tests/: test_comprehensive_improvements.py  test_no_opencv.py
